Pending changes in the mainline
===============================

REST API
--------

* API version upgraded to 21
* Added a route to delete the output of an asynchronous job (right now
  only for archive jobs): e.g. DELETE /jobs/../archive

Plugins
-------

* Added "OrthancPluginLoadDicomInstance()" to load DICOM instances from the database

Maintenance
-----------

* Fix decoding of YBR_FULL RLE images for which the "Planar Configuration" 
  tag (0028,0006) equals 1
* Made Orthanc more resilient to common spelling errors in SpecificCharacterSet
* Modality worklists plugin: allow searching on private tags (exact match only)
* Fix orphan files remaining in storage when working with MaximumStorageSize
  (https://discourse.orthanc-server.org/t/issue-with-deleting-incoming-dicoms-when-maximumstoragesize-is-reached/3510)
* When deleting a resource, its parents LastUpdate metadata are now updated.
* Reduced the memory usage when downloading archives when "ZipLoaderThreads" > 0.
* Upgraded dependencies for static builds:
  - boost 1.82.0


Version 1.12.0 (2023-04-14)
===========================

General
-------

* Support for labels associated with patients, studies, series, and instances
* Added a sample plugin bringing multitenant DICOM support through labels

REST API
--------

* API version upgraded to 20
* New URIs "/.../{id}/labels/{label}" to test/set/remove labels
* "/patients/{id}", "/studies/{id}", "/series/{id}" and "/instances/{id}"
  contain the "Labels" field
* "/tools/find" now accepts the "Labels" and "LabelsConstraint" arguments
* "/tools/labels" lists all the labels that are associated with any resource
* "/system": added "UserMetadata" and "HasLabels"
* Added option "?numeric" if listing metadata

Plugins
-------

* Added "OrthancPluginRegisterDatabaseBackendV4()" to communicate using Google
  Protocol Buffers between the Orthanc core and database plugins

Orthanc Explorer
----------------

* Added support for labels